@@ -29,7 +29,7 @@ from astrapy.admin.endpoints import (
     database_id_matcher,
     parse_api_endpoint,
 )
-from astrapy.constants import Environment, ModelStatus
+from astrapy.constants import DatabaseStatus, Environment, ModelStatus
 from astrapy.exceptions import (
     DevOpsAPIException,
     DevOpsAPIHttpException,
@@ -56,12 +56,6 @@ from astrapy.settings.defaults import (
     DEFAULT_DEV_OPS_AUTH_HEADER,
     DEFAULT_DEV_OPS_AUTH_PREFIX,
     DEV_OPS_DATABASE_POLL_INTERVAL_S,
-    DEV_OPS_DATABASE_STATUS_ACTIVE,
-    DEV_OPS_DATABASE_STATUS_INITIALIZING,
-    DEV_OPS_DATABASE_STATUS_MAINTENANCE,
-    DEV_OPS_DATABASE_STATUS_PENDING,
-    DEV_OPS_DATABASE_STATUS_TERMINATED,
-    DEV_OPS_DATABASE_STATUS_TERMINATING,
     DEV_OPS_DEFAULT_DATABASES_PAGE_SIZE,
     DEV_OPS_KEYSPACE_POLL_INTERVAL_S,
     DEV_OPS_RESPONSE_HTTP_ACCEPTED,
@@ -1206,10 +1200,10 @@ class AstraDBAdmin:
             f"{name}/({cloud_provider}, {region})"
         )
         if wait_until_active:
-            last_status_seen = DEV_OPS_DATABASE_STATUS_PENDING
+            last_status_seen = DatabaseStatus.PENDING.value
             while last_status_seen in {
-                DEV_OPS_DATABASE_STATUS_PENDING,
-                DEV_OPS_DATABASE_STATUS_INITIALIZING,
+                DatabaseStatus.PENDING.value,
+                DatabaseStatus.INITIALIZING.value,
             }:
                 logger.info(f"sleeping to poll for status of '{new_database_id}'")
                 time.sleep(DEV_OPS_DATABASE_POLL_INTERVAL_S)
@@ -1222,11 +1216,11 @@ class AstraDBAdmin:
                     caller_function_name="create_database",
                 )
                 last_status_seen = last_db_info.status
-            if last_status_seen != DEV_OPS_DATABASE_STATUS_ACTIVE:
+            if last_status_seen != DatabaseStatus.ACTIVE.value:
                 raise DevOpsAPIException(
                     f"Database {name} entered unexpected status "
-                    f"{last_status_seen} after {DEV_OPS_DATABASE_STATUS_PENDING}"
-                    f"/{DEV_OPS_DATABASE_STATUS_INITIALIZING}"
+                    f"{last_status_seen} after {DatabaseStatus.PENDING.value}"
+                    f"/{DatabaseStatus.INITIALIZING.value}"
                 )
         # return the database instance
         logger.info(
@@ -1382,10 +1376,10 @@ class AstraDBAdmin:
             f"{name}/({cloud_provider}, {region}), async"
         )
         if wait_until_active:
-            last_status_seen = DEV_OPS_DATABASE_STATUS_PENDING
+            last_status_seen = DatabaseStatus.PENDING.value
             while last_status_seen in {
-                DEV_OPS_DATABASE_STATUS_PENDING,
-                DEV_OPS_DATABASE_STATUS_INITIALIZING,
+                DatabaseStatus.PENDING.value,
+                DatabaseStatus.INITIALIZING.value,
             }:
                 logger.info(
                     f"sleeping to poll for status of '{new_database_id}', async"
@@ -1400,11 +1394,11 @@ class AstraDBAdmin:
                     caller_function_name="async_create_database",
                 )
                 last_status_seen = last_db_info.status
-            if last_status_seen != DEV_OPS_DATABASE_STATUS_ACTIVE:
+            if last_status_seen != DatabaseStatus.ACTIVE.value:
                 raise DevOpsAPIException(
                     f"Database {name} entered unexpected status "
-                    f"{last_status_seen} after {DEV_OPS_DATABASE_STATUS_PENDING}"
-                    f"/{DEV_OPS_DATABASE_STATUS_INITIALIZING}"
+                    f"{last_status_seen} after {DatabaseStatus.PENDING.value}"
+                    f"/{DatabaseStatus.INITIALIZING.value}"
                 )
         # return the database instance
         logger.info(
@@ -1520,9 +1514,9 @@ class AstraDBAdmin:
             )
         logger.info(f"DevOps API returned from dropping database '{id}'")
         if wait_until_active:
-            last_status_seen: str = DEV_OPS_DATABASE_STATUS_TERMINATING
+            last_status_seen: str = DatabaseStatus.TERMINATING.value
             _db_name: str | None = None
-            while last_status_seen == DEV_OPS_DATABASE_STATUS_TERMINATING:
+            while last_status_seen == DatabaseStatus.TERMINATING.value:
                 logger.info(f"sleeping to poll for status of '{id}'")
                 time.sleep(DEV_OPS_DATABASE_POLL_INTERVAL_S)
                 # poll for status
@@ -1535,11 +1529,11 @@ class AstraDBAdmin:
                     caller_function_name="drop_database",
                 )
                 last_status_seen = last_db_info.status
-            if last_status_seen != DEV_OPS_DATABASE_STATUS_TERMINATED:
+            if last_status_seen != DatabaseStatus.TERMINATED.value:
                 _name_desc = f" ({_db_name})" if _db_name else ""
                 raise DevOpsAPIException(
                     f"Database {id}{_name_desc} entered unexpected status "
-                    f"{last_status_seen} after {DEV_OPS_DATABASE_STATUS_TERMINATING}"
+                    f"{last_status_seen} after {DatabaseStatus.TERMINATING.value}"
                 )
         logger.info(f"finished dropping database '{id}' (DevOps API)")
 
@@ -1637,9 +1631,9 @@ class AstraDBAdmin:
             )
         logger.info(f"DevOps API returned from dropping database '{id}', async")
         if wait_until_active:
-            last_status_seen: str = DEV_OPS_DATABASE_STATUS_TERMINATING
+            last_status_seen: str = DatabaseStatus.TERMINATING.value
             _db_name: str | None = None
-            while last_status_seen == DEV_OPS_DATABASE_STATUS_TERMINATING:
+            while last_status_seen == DatabaseStatus.TERMINATING.value:
                 logger.info(f"sleeping to poll for status of '{id}', async")
                 await asyncio.sleep(DEV_OPS_DATABASE_POLL_INTERVAL_S)
                 # poll for status
@@ -1652,11 +1646,11 @@ class AstraDBAdmin:
                     caller_function_name="async_drop_database",
                 )
                 last_status_seen = last_db_info.status
-            if last_status_seen != DEV_OPS_DATABASE_STATUS_TERMINATED:
+            if last_status_seen != DatabaseStatus.TERMINATED.value:
                 _name_desc = f" ({_db_name})" if _db_name else ""
                 raise DevOpsAPIException(
                     f"Database {id}{_name_desc} entered unexpected status "
-                    f"{last_status_seen} after {DEV_OPS_DATABASE_STATUS_TERMINATING}"
+                    f"{last_status_seen} after {DatabaseStatus.TERMINATING.value}"
                 )
         logger.info(f"finished dropping database '{id}' (DevOps API), async")
 
@@ -3230,8 +3224,8 @@ class AstraDBDatabaseAdmin(ProviderQueryingDatabaseAdmin):
             f"'{name}' on '{self._database_id}'"
         )
         if wait_until_active:
-            last_status_seen = DEV_OPS_DATABASE_STATUS_MAINTENANCE
-            while last_status_seen == DEV_OPS_DATABASE_STATUS_MAINTENANCE:
+            last_status_seen = DatabaseStatus.MAINTENANCE.value
+            while last_status_seen == DatabaseStatus.MAINTENANCE.value:
                 logger.info(f"sleeping to poll for status of '{self._database_id}'")
                 time.sleep(DEV_OPS_KEYSPACE_POLL_INTERVAL_S)
                 last_status_seen = (
@@ -3248,7 +3242,7 @@ class AstraDBDatabaseAdmin(ProviderQueryingDatabaseAdmin):
                     )
                     .status
                 )
-            if last_status_seen != DEV_OPS_DATABASE_STATUS_ACTIVE:
+            if last_status_seen != DatabaseStatus.ACTIVE.value:
                 raise DevOpsAPIException(
                     f"Database entered unexpected status {last_status_seen} after MAINTENANCE."
                 )
@@ -3366,8 +3360,8 @@ class AstraDBDatabaseAdmin(ProviderQueryingDatabaseAdmin):
             f"'{name}' on '{self._database_id}', async"
         )
         if wait_until_active:
-            last_status_seen = DEV_OPS_DATABASE_STATUS_MAINTENANCE
-            while last_status_seen == DEV_OPS_DATABASE_STATUS_MAINTENANCE:
+            last_status_seen = DatabaseStatus.MAINTENANCE.value
+            while last_status_seen == DatabaseStatus.MAINTENANCE.value:
                 logger.info(
                     f"sleeping to poll for status of '{self._database_id}', async"
                 )
@@ -3383,7 +3377,7 @@ class AstraDBDatabaseAdmin(ProviderQueryingDatabaseAdmin):
                     caller_function_name="async_create_keyspace",
                 )
                 last_status_seen = last_db_info.status
-            if last_status_seen != DEV_OPS_DATABASE_STATUS_ACTIVE:
+            if last_status_seen != DatabaseStatus.ACTIVE.value:
                 raise DevOpsAPIException(
                     f"Database entered unexpected status {last_status_seen} after MAINTENANCE."
                 )
@@ -3494,8 +3488,8 @@ class AstraDBDatabaseAdmin(ProviderQueryingDatabaseAdmin):
             f"'{name}' on '{self._database_id}'"
         )
         if wait_until_active:
-            last_status_seen = DEV_OPS_DATABASE_STATUS_MAINTENANCE
-            while last_status_seen == DEV_OPS_DATABASE_STATUS_MAINTENANCE:
+            last_status_seen = DatabaseStatus.MAINTENANCE.value
+            while last_status_seen == DatabaseStatus.MAINTENANCE.value:
                 logger.info(f"sleeping to poll for status of '{self._database_id}'")
                 time.sleep(DEV_OPS_KEYSPACE_POLL_INTERVAL_S)
                 last_status_seen = (
@@ -3512,7 +3506,7 @@ class AstraDBDatabaseAdmin(ProviderQueryingDatabaseAdmin):
                     )
                     .status
                 )
-            if last_status_seen != DEV_OPS_DATABASE_STATUS_ACTIVE:
+            if last_status_seen != DatabaseStatus.ACTIVE.value:
                 raise DevOpsAPIException(
                     f"Database entered unexpected status {last_status_seen} after MAINTENANCE."
                 )
@@ -3622,8 +3616,8 @@ class AstraDBDatabaseAdmin(ProviderQueryingDatabaseAdmin):
             f"'{name}' on '{self._database_id}', async"
         )
         if wait_until_active:
-            last_status_seen = DEV_OPS_DATABASE_STATUS_MAINTENANCE
-            while last_status_seen == DEV_OPS_DATABASE_STATUS_MAINTENANCE:
+            last_status_seen = DatabaseStatus.MAINTENANCE.value
+            while last_status_seen == DatabaseStatus.MAINTENANCE.value:
                 logger.info(
                     f"sleeping to poll for status of '{self._database_id}', async"
                 )
@@ -3639,7 +3633,7 @@ class AstraDBDatabaseAdmin(ProviderQueryingDatabaseAdmin):
                     caller_function_name="async_drop_keyspace",
                 )
                 last_status_seen = last_db_info.status
-            if last_status_seen != DEV_OPS_DATABASE_STATUS_ACTIVE:
+            if last_status_seen != DatabaseStatus.ACTIVE.value:
                 raise DevOpsAPIException(
                     f"Database entered unexpected status {last_status_seen} after MAINTENANCE."
                 )
