@@ -87,13 +87,7 @@ DEV_OPS_KEYSPACE_POLL_INTERVAL_S = 2
 DEV_OPS_DATABASE_POLL_INTERVAL_S = 15
 DEFAULT_DATABASE_ADMIN_TIMEOUT_MS = 600000
 DEFAULT_KEYSPACE_ADMIN_TIMEOUT_MS = 30000
-DEV_OPS_DATABASE_STATUS_MAINTENANCE = "MAINTENANCE"
-DEV_OPS_DATABASE_STATUS_ACTIVE = "ACTIVE"
-DEV_OPS_DATABASE_STATUS_PENDING = "PENDING"
-DEV_OPS_DATABASE_STATUS_INITIALIZING = "INITIALIZING"
-DEV_OPS_DATABASE_STATUS_ERROR = "ERROR"
-DEV_OPS_DATABASE_STATUS_TERMINATED = "TERMINATED"
-DEV_OPS_DATABASE_STATUS_TERMINATING = "TERMINATING"
+
 DEV_OPS_URL_ENV_MAP = {
     DATA_API_ENVIRONMENT_PROD: "https://api.astra.datastax.com",
     DATA_API_ENVIRONMENT_DEV: "https://api.dev.cloud.datastax.com",
